# dergo-blender

./: .hgignore  LICENSE_Server.txt  README.md
DERGO_Client/: __init__.py  engine.py  export_to_file.py  import_from_file.py  instant_radiosity.py  mesh_export.py  network.py  parallax_corrected_cubemaps.py  properties.py  reload_shaders.py  shadows.py  test.py  ui.py  ui_base.py  ui_hdr.py  voxel_cone_tracing.py
DERGO_Client/Tests/: test02.py
DERGO_Client/imports/: import_materials.py
DERGO_Server/: CMakeLists.txt
DERGO_Server/CMake/Dependencies/: OGRE.cmake  libevent.cmake
DERGO_Server/CMake/Templates/: Resources.cfg.in
DERGO_Server/include/: DergoCommon.h  DergoSystem.h  GraphicsSystem.h  VertexUtils.h
DERGO_Server/include/Network/: NetworkListener.h  NetworkMessage.h  NetworkSystem.h  SmartData.h
DERGO_Server/include/System/: WindowEventListener.h
DERGO_Server/include/Utils/: ShadowsUtils.h
DERGO_Server/src/: DergoSystem.cpp  GraphicsSystem.cpp  VertexUtils.cpp  main.cpp
DERGO_Server/src/Network/: NetworkSystem.cpp  NetworkSystem.cpp.rT1224
DERGO_Server/src/System/: WindowEventListener.cpp
DERGO_Server/src/Utils/: HdrUtils.cpp  ShadowsUtils.cpp
